# libaa

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  conanfile.py  config_8cpp.html  config_8cpp__incl.map  config_8cpp__incl.md5  config_8hpp.html  config_8hpp__incl.map  config_8hpp__incl.md5  config_8hpp_source.html  def_8hpp.html  def_8hpp__dep__incl.map  def_8hpp__dep__incl.md5  def_8hpp_source.html  dir_000002_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_755f0d2039dcbad844014f016ea14e59.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  graph_legend.html  index.html  requirements.txt  setup.cfg  setup.py
.github/workflows/: doxygen.yml  freebsd.yml  linux.yml  macos.yml  mingw.yml  msvc.yml  msys2.yml
cmake/: clang.cmake  config.hpp  config.pc  core.cmake  mingw32.cmake  mingw64.cmake  sanitize.cmake  standard.cmake  warnings.cmake
cmake/vcpkg/: portfile.cmake  vcpkg.json
doc/: Doxyfile
include/a/: def.hpp  dev.hpp
scripts/: format  format.py
search/: all_1.js  all_2.js  all_3.js  files_0.js  files_1.js  functions_0.js  pages_0.js  searchdata.js
src/: config.cpp  dev.cpp
src/cython/: config.pxd  config.pxi  cython.pyx
tests/: CMakeLists.txt  test.cpp
