[metadata]
name = libaa
version = 0.1.0
url = https://github.com/tqfx/libaa.git
author = tqfx
author_email = tqfx@foxmail.com
classifiers =
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Python
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
license = MPL-2.0
description = An algorithm library based on C++ language
long_description = file: README.md
long_description_content_type = text/markdown
keywords = algorithms
platforms = CPython
